# gigaku

./: .gitignore  CLAUDE.md  README.md  main.py  migaku_switch_language.py  pyproject.toml
lib/: _rijndael.py  applescript.py  chrome.py  cli.py  config.py  display.py  tv.py
steps/: 01_wait_samsung.py  02_close_samsung_windows.py  03_focus_samsung.py  04_open_ci.py  05_open_migaku.py  06_switch_language.py  07_fullscreen_migaku.py  08_fullscreen_ci.py  step_0_switch_input.py  step_0_wait_samsung.py  step_1_switch_input.py  step_1_wait_samsung.py  step_2_close_samsung_windows.py  step_2_focus_samsung.py  step_3_close_samsung_windows.py  step_3_focus_samsung.py  step_4_open_ci.py  step_4_open_migaku.py  step_5_fullscreen_migaku.py  step_5_open_migaku.py  step_6_switch_language.py  step_7_fullscreen_migaku.py  step_7_open_ci.py  step_8_fullscreen_ci.py  step_8_pin_toolbar.py  step_close_netflix_tabs.py  step_close_samsung_windows.py  step_dim_display.py  step_enable_bluetooth.py  step_focus_samsung.py  step_fullscreen_ci_video.py  step_fullscreen_migaku.py  step_open_ci.py  step_open_migaku.py  step_pause_media.py  step_pin_toolbar.py  step_refresh_migaku.py  step_switch_input.py  step_switch_language.py  step_vpn.py  (+3 more)
