[tool.poetry]
name = "gigaku"
version = "0.1.0"
description = "Migaku extension automation script"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
selenium = "^4.40.0"
webdriver-manager = "^4.0.2"
pyobjc-framework-quartz = "^12.1"
pycryptodome = "^3.23.0"
requests = "^2.32.5"
websocket-client = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
