[project]
name = "gigaku"
version = "0.1.0"
description = "Migaku extension automation script"
requires-python = ">=3.14"
dependencies = [
    "pyobjc-framework-quartz>=12.1",
    "pycryptodome>=3.23.0",
    "requests>=2.32.5",
    "websocket-client>=1.9.0",
]

[project.scripts]
gigaku = "lib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "steps"]
